# Kafka-Streaming

./: .gitignore  Dockerfile  README.md  __init__.py  dbt-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
dags/: dag_task_flow.py  dbt_dag.py  first_dag.py  kafkaproducer_dag.py  main.py  orders_dag.py
dags/dbt/Realtime_ordersAnalytics/: dbt_project.yml
dags/dbt/Realtime_ordersAnalytics/models/marts/: vw_customers_metrics.sql  vw_mostsold_product.sql  vw_order_status.sql  vw_orders_per_region.sql
dags/dbt/Realtime_ordersAnalytics/models/staging/: d_customer.sql  d_payments.sql  d_product.sql  d_shipment.sql  f_orders.sql  src_ecomerce.yml  stg_ecomerce_orders.sql
jobs/: consumer.py  producer.py  sparkstream.py  test.py
kafka/: admin.py  producer.py  sparkstream.py
kafka/data/: product_mapping.py
streamlit/: app.py
streamlit/.streamlit/: secrets.toml
